[package]
name = "speedy_refs"
version = "0.1.0"
description = "Simpler, Faster alternatives to std smart pointers plus much more"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-format = "0.4.4"
thread_runner = "0.2.0"
tokio = { version = "1.27.0", features = ["full"] }
