[package]
name = "speedy_refs"
version = "0.1.0"
description = "Simpler, Faster, and lighter alternatives to std smart pointers and much more"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-format = "0.4.4"
