[package]
name = "speedy_refs"
authors = ["Isaac Newton Dzikum<nisaacdz@gmail.com>"]
version = "0.2.6"
description = "A collection of simple and fast and useful smart pointers."
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.96"
